// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doctype-first tests/rules/doctype-first/error-no-doctype.html 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "[101m[html-lint] 1 error in tests/rules/doctype-first/error-no-doctype.html[49m",
    ],
    Array [
      "[90mdoctype-first: HTML files should begin with a \`doctype\`.[39m
[0m[31m[1m>[22m[39m[90m 1 | [39m[33m<[39m[33mhtml[39m[33m>[39m[33m<[39m[33m/[39m[33mhtml[39m[33m>[39m[0m
[0m [90m   | [39m[31m[1m^[22m[39m [31m[1mHTML files should begin with a \`doctype\`.[22m[39m[0m",
      "
",
    ],
    Array [
      "
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`doctype-first tests/rules/doctype-first/error-no-doctype-leading-comments.html 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "[101m[html-lint] 1 error in tests/rules/doctype-first/error-no-doctype.html[49m",
    ],
    Array [
      "[90mdoctype-first: HTML files should begin with a \`doctype\`.[39m
[0m[31m[1m>[22m[39m[90m 1 | [39m[33m<[39m[33mhtml[39m[33m>[39m[33m<[39m[33m/[39m[33mhtml[39m[33m>[39m[0m
[0m [90m   | [39m[31m[1m^[22m[39m [31m[1mHTML files should begin with a \`doctype\`.[22m[39m[0m",
      "
",
    ],
    Array [
      "
",
    ],
    Array [
      "[101m[html-lint] 1 error in tests/rules/doctype-first/error-no-doctype-leading-comments.html[49m",
    ],
    Array [
      "[90mdoctype-first: HTML files should begin with a \`doctype\`.[39m
[0m [90m 1 | [39m[33m<[39m[33m![39m[33m--[39m [36mthis[39m is a test [33m--[39m[33m>[39m[0m
[0m[31m[1m>[22m[39m[90m 2 | [39m[33m<[39m[33mhtml[39m[33m>[39m[33m<[39m[33m/[39m[33mhtml[39m[33m>[39m[0m
[0m [90m   | [39m[31m[1m^[22m[39m [31m[1mHTML files should begin with a \`doctype\`.[22m[39m[0m",
      "
",
    ],
    Array [
      "
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
